--- a/style.css
+++ b/style.css
@@ -257,6 +257,13 @@ color: #6E6F7A;
 
 }
 
+@media (min-width: 1200px){
+
+  .container {
+      max-width: 1300px;
+  }
+
+  
 
 .number-box{
   box-sizing: border-box;
