--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family:Gilroy-Semibold;
-  src: url(font/Gilroy-Semibold.otf);
+  src: url('font/Gilroy-Semibold.otf');
 }
 @font-face {
   font-family:Gilroy-Light;
-  src: url(font/Gilroy-Light.otf);
+  src: url('font/Gilroy-Light.otf');
 }
 
  .nav-link{
@@ -23,7 +23,7 @@
   font-style: normal;
   font-weight: 600;
   font-size: 42px;
-  line-height: 54%;
+  line-height: 53,3%;
   letter-spacing: -0.01em;
   color: #2B2E83;
   
