--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 26px;
-    font-family:Gilroy-Light;
+    font-family:Gilroy-Semibold;
     padding: 13px 49px 13px 49px;
     }
 
@@ -316,5 +316,4 @@ font-size: 16px;
 line-height: 130%;
 letter-spacing: -0.01em;
 color: #050617;
-
 }
