--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
     }
 
 
+    .text-center{
+      padding-bottom:24px;
+    }
+
 .title{
   font-family: 'Gilroy-Semibold';
   font-style: normal;
