--- a/style.css
+++ b/style.css
@@ -284,6 +284,7 @@ border-bottom: 2px solid black !important;
   flex-direction: row;
   justify-content: center;
   margin-top:30px;
+  margin-bottom: 10%;
   align-items: center;
   padding: 8px 24px;
   color:white;
